<resources>
    <string name="app_name">Usaha &amp; Energi</string>
    <string name="splash_text1">USAHA &amp; ENERGI</string>
    <string name="splash_text2">Materi Pembelajaran Fisika</string>
    <string name="apersepsi_main">APERSEPSI</string>
    <string name="KI_main">KI,KD,INDIKATOR,TEORI PEMBELAJARAN</string>
    <string name="peta_main">PETA KONSEP</string>
    <string name="tokoh_main">TOKOH FISIKA</string>
    <string name="materi_main">MATERI</string>
    <string name="soal_main">SOAL TES</string>
    <string name="toolbar">Toolbar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apersepsi_detail">Jumlah energi atau kalori yang masuk serta keluar menentukan berat badan kita. Saat berlari, kita dapat mengurangi kalori dan lemak tubuh melalui pengeluaran energi. Berlari juga memperkuat tulang dan otot serta membantu metabolism. Tetapi pada titik tertentu, kita dapat membangun otot hanya dengan berlari saja.
	Energi yang Anda habiskan tersebut tidak akan hilang, tetapi berubah bentuk menjadi energi yang lain. Misalnya, panas, suara, dan bentuk energi lain. Hasil dari penggunaan energi yang menghasilkan perubahan tertentu, seperti perpindahan disebut sebagai usaha atau kerja.
	Contoh dari perubahan energi yang menghasilkan usaha terdapat pada pembangkit listrik. Untuk menghasilkan listrik, diperlukan konversi atau perubahan energi dari bentuk awal. Contohnya, angin, air, panas bumi, atau nuklir. Pada pembangkit listrik bertenaga angin dan air, energi dari hasil perubahan kecepatan (energi kinetik) dipergunakan untuk menggerakkan turbin sehingga generator dapat bekerja untuk menyimpan energi listrik. Sementara itu, pembangkit listrik tenaga panas bumi atau nuklir, memanfaatkan energi panas dari inti Bumi atau reaksi peluruhan sehingga menciptakan uap bertekanan tinggi untuk menggerakkan turbin dan menyalakan generator. Energi listrik tersebut terbentuk akibat usaha dari berbagai konservasi energi. </string>
    <string name="hubungi">Hubungi Saya</string>
    <string name="nama">Putri Chusnul Chotimah L</string>
    <string name="nim">NIM : 20600117060</string>
    <string name="jurusan">Jurusan Pendidikan Fisika</string>
    <string name="fakultas">Fakultas Tarbiyah dan Keguruan</string>
    <string name="kampus">UIN Alauddin Makassar</string>
    <string name="judul">Pengembangan Modul Multimedia Mobile Learning Berbasis Android Pada Materi Usaha dan Energi Kelas X IPA di SMAN 10 Makassar</string>
    <string name="tokohtext1">Sir Charles Algernon Parsons (1854-1931) merupakan seorang ilmuan dari Inggris yang menciptakan turbin uap multi-stage sebagai mesin pendorong pada kapal laut. Pada tahun 1889, Persons mulai membangun rancangannya sendiri di Newcastle untuk membuat mesin turbin uap, dinamo, dan perangkat listrik lainnya. Mesin turbin diciptakan pada tahun 1884 dan terdiri dari beberapa tahap. Pada setiap tahap, ekspansi dari uap dibatasi sampai kondisi tertentu sehingga dapat menghasilkan energi kinetik yang besar tanpa menyebabkan kipas turbin bergerak terlalu cepat.</string>
    <string name="tokohtext2">Pada tahun 1891, turbin buatan Parsons dipasangkan dengan sebuah kondenser untuk menghasilkan energi listrik dan pada tahun 1897, turbin tersebut berhasil diaplikasikan sebagai mesin pendorong pada kapal bernama Turbinia. Kapal tersebut dapat melaju dengan kecepatan 34,5 knot, di mana pada waktu itu termasuk sangat cepat.</string>
    <string name="kiA">A. Kompetensi Inti</string>
    <string name="kiA1">Menghayati dan mengamalkan ajaran agama yang dianutnya.</string>
    <string name="kiA2">Menghayati dan mengamalkan perilaku jujur, disiplin, tanggungjawab, peduli 	(gotong royong, kerjasama; toleran, damai), santun, responsif dan proaktif dan 	menunjukkan sikap sebagai bagian dari solusi atas berbagai permasalahn dalam 	berinteraksi secara efektif dengan lingkungan sosial.</string>
    <string name="kiA3">Memahami, menerapkan, menganalisis pengetahuan faktual, konseptual, 	prosedural 	berdasarkan rasa ingintahunya tentang ilmu pengetahuan, teknologi, 	seni, budaya, dan humaniora dengan wawasan kemanusiaan, kebangsaan, 	kenegaraan, dan peradaban terkait penyebab fenomena dan kejadian, serta 	menerapkan pengetahuan prosedural pada bidang kajian yang spesifik sesuai 	dengan bakat dan minatnya untuk memecahkan masalah. </string>
    <string name="kiA4">Mengolah, menalar, dan menyaji dalam ranah konkret dan ranah abstrak terkait 	dengan pengembangan dari yang dipelajarinya di sekolah secara mandiri, dan 	mampu menggunakan metode sesuai kaidah keilmuan.</string>
    <string name="kiB">B. Kompetensi Dasar</string>
    <string name="kiB1">Menganalisis konsep energi, usaha (kerja), hubungan usaha (kerja), dan perubahan 	energi, hukum kekekalan energi, serta penerapannya dalam peristiwa sehari-hari. </string>
    <string name="kiC">C. Indikator</string>
    <string name="kiC1">Menjelaskan pengertian usaha</string>
    <string name="kiC2">Mendeskripsikan hubungan antara usaha, gaya, dan perpindahan</string>
    <string name="kiC3">Menghitung besar energi potensial (gravitasi dan pegas) dan energi kinetik</string>
    <string name="kiC4">Menganalisis hubungan antara usaha dan energi kinetik</string>
    <string name="kiC5">Menganalisis hubungan antara usaha dan energi potensial</string>
    <string name="kiC6">Merumuskan bentuk hukum kekekalan energi mekanik</string>
    <string name="kiC7">Menjelaskan pengertian energi kinetik dan energi potensial</string>
    <string name="kiC8">Menjelaskan hubungan usaha dan energi kinetik</string>
    <string name="kiC9">Menjelaskan hubungan usaha dan energi potensial</string>
    <string name="kiC10">Mendefinisikan hubungan usaha dan energi</string>
    <string name="kiC11">Menjelaskan hukum kekekalan energi mekanik</string>
    <string name="kiD">D. Tujuan Pembelajaran</string>
    <string name="kiD1">Peserta didik mampu menjelaskan pengertian usaha dan energi</string>
    <string name="kiD2">Peserta didik mampu mendeskripsikan hubungan antara usaha, gaya, dan perpindahan</string>
    <string name="kiD3">Peserta didik mampu menghitung besar energi potensial (gravitasi dan pegas) dan energi 	kinetik</string>
    <string name="kiD4">Peserta didik mampu menganalisis hubungan antara usaha dan energi kinetik </string>
    <string name="kiD5">Peserta didik mampu menganalisis hubungan antara usaha dan energi potensial</string>
    <string name="kiD6">Peserta didik mampu merumuskan bentuk hukum kekekalan energi mekanik</string>
    <string name="kiD7">Peserta didik mampu menjelaskan pengertian energi kinetik dan energi potensial</string>
    <string name="kiD8">Peserta didik mampu mengetahui hubungan usaha dan energi kinetik</string>
    <string name="kiD9">Peserta didik mampu mengetahui hubungan usaha dan energi potensial</string>
    <string name="soal1">Hasil kali gaya dengan perpindahan benda merupakan......</string>
    <string name="soal1a">A. Percepatan</string>
    <string name="soal1b">B. Kecepatan</string>
    <string name="soal1c">C. Usaha</string>
    <string name="soal1d">D. Energi</string>
    <string name="soal1e">E. Gaya</string>
    <string name="soal3">Rina mendorong sebuah pintu dengan gaya tertentu, ternyata pintu yang didorong Rina bersifat elastis, sehingga kembali ke posisi semula, besarnya usaha Rina terhadap pintu tersebut adalah...</string>
    <string name="soal3a">A. Sebesar gaya yang diberikan Rina</string>
    <string name="soal3b">B. Sebesar batas elastisitas pintu</string>
    <string name="soal3c">C. Usahanya tidak sama dengan nol</string>
    <string name="soal3d">D. Usahanya sama dengan nol</string>
    <string name="soal3e">E. Sebesar perpindahan pintu dari posisinya</string>
    <string name="soal2">Perhatikan pernyataan berikut:<br />
1)Ami bersepeda dari rumah menuju lapangan dan kembali lagi ke rumah<br />
2)Suga mencetak gol dari tendangan jarak jauh<br />
3)Moni mendorong tembok dengan sekuat tenaga<br /> 
4)Lisa mendorong meja sejauh 2 meter<br />
Berdasarkan pernyataan diatas, kegiatan yang merupakan contoh usaha adalah ...</string>
    <string name="soal2a">A. 1) dan 2)</string>
    <string name="soal2b">B. 1) dan 4)</string>
    <string name="soal2c">C. 2) dan 3)</string>
    <string name="soal2d">D. 2) dan 4)</string>
    <string name="soal2e">E. 3) dan 4)</string>
    <string name="soal5">Benda pertama memiliki massa m dan kecepatan v. Benda kedua memiliki massa 3 kali benda pertama dan kecepatan 2 kali benda pertama. Perbandingan energi kinetik yang dimiliki oleh benda kedua dan benda pertama adalah....</string>
    <string name="soal5a">A. 12 : 1</string>
    <string name="soal5b">B. 12 : 2</string>
    <string name="soal5c">C. 12 : 3</string>
    <string name="soal5d">D. 12 : 4</string>
    <string name="soal5e">E. 12: 5</string>
    <string name="soal15">Dua buah benda menuruni lintasan dari titik A. Massa benda pertama m1 = 5 kg dan benda kedua m2 = 15 kg. Jika percepatan gravitasi g = 10 m/s2, maka perbandingan energi kinetik EK1 : EK2 di titik B adalah….</string>
    <string name="soal15a">A. 1 : 2</string>
    <string name="soal15b">B. 1 : 3</string>
    <string name="soal15c">C. 1 : 9</string>
    <string name="soal15d">D. 2 : 1</string>
    <string name="soal15e">E. 3 : 1</string>
    <string name="soal8">Sebongkah balok es bermassa 2000 gram didorong dengan gaya F di atas permukaan lantai sehingga resultan gaya yang bekerja pada balok es 10 N selama 2 sekon. Setelah 2 sekon gaya dorong tersebut dihilangkan kemudian balok es tersebut mampu menempuh jarak 5 meter lalu berhenti. Berapa besar gaya dorong yang diberikan pada balok es tersebut .... N</string>
    <string name="soal8a">A. 30 N</string>
    <string name="soal8b">B. 20 N</string>
    <string name="soal8c">C. 15 N</string>
    <string name="soal8d">D. 10 N</string>
    <string name="soal8e">E. 5 N</string>
    <string name="soal9">Sebuah balok bermassa 3 kg bergerak ke atas pada bidang miring yang sudut miringnya 60°, dengan energi kinetik awal 18 J. Jika koefisien gesekannya 0,3 maka jarak terjauh yang dicapai balok saat meluncur pada bidang miring adalah sekitar …. m.</string>
    <string name="soal9a">A. 1 m</string>
    <string name="soal9b">B. 0,8 m</string>
    <string name="soal9c">C. 0,6 m</string>
    <string name="soal9d">D. 0,4 m</string>
    <string name="soal9e">E. 0,2 m</string>
    <string name="latihanhukum1">Dua buah benda menuruni lintasan dari titik A. Massa benda pertama m1 = 5 kg dan benda kedua m2 = 15 kg. Jika percepatan gravitasi g = 10 m/s2, maka perbandingan energi kinetik EK1 : EK2 di titik B adalah….</string>
    <string name="latihanhukum1a">A. 1:2</string>
    <string name="latihanhukum1b">B. 1:3</string>
    <string name="latihanhukum1c">C. 1:9</string>
    <string name="latihanhukum1d">D. 2:1</string>
    <string name="latihanhukum1e">E. 3:1</string>
    <string name="latihanhukum2">Pada musim dingin di Negara Swedia diadakan perlombaan ski es di daerah pegunungan. Pemain ski es meluncur dari ketinggian A seperti pada gambar. Jika kecepatan awal pemain ski = nol, dan percepatan gravitasi = 10 m/s2, maka kecepatan pemain pada saat ketinggian B adalah….</string>
    <string name="latihanhukum2a">A. Akar 2 m.s-1</string>
    <string name="latihanhukum2b">B. 5 Akar 2 m.s-1</string>
    <string name="latihanhukum2c">C. 10 Akar 2 m.s-1</string>
    <string name="latihanhukum2d">D. 20 Akar 2 m.s-1</string>
    <string name="latihanhukum2e">E. 25 Akar 2 m.s-1</string>
    <string name="latihandaya1">Seorang yang massanya 60 kg menaiki tangga yang tingginya 20 m dalam selang waktu 2 menit. Bila g = 10 m/s2, berapa daya yang dikeluarkan oleh orang tersebut….</string>
    <string name="latihandaya1a">A. 120</string>
    <string name="latihandaya1b">B. 100</string>
    <string name="latihandaya1c">C. 900</string>
    <string name="latihandaya1d">D. 300</string>
    <string name="latihandaya1e">E. 200</string>
</resources>