<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_new_blue"
    tools:context=".menu.soal.soal1.SoalFragment">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_soal"/>

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soal1"
        android:textColor="@color/black"
        android:layout_marginHorizontal="24dp"
        android:textSize="18sp"
        android:layout_below="@id/toolbar_soal"
        android:layout_marginTop="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/btnA"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal1a"/>

        <Button
            android:id="@+id/btnB"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal1b"/>

        <Button
            android:id="@+id/btnC"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal1c"/>

        <Button
            android:id="@+id/btnD"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal1d"/>

        <Button
            android:id="@+id/btnE"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal1e"/>

    </LinearLayout>

</RelativeLayout>