<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_new_blue"
    tools:context=".menu.materi.daya.DayaLatihanActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_soal_energi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latihandaya1"
        android:textColor="@color/black"
        android:layout_marginHorizontal="24dp"
        android:textSize="18sp"
        android:layout_marginTop="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/btnA"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/latihandaya1a"/>

        <Button
            android:id="@+id/btnB"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/latihandaya1b"/>

        <Button
            android:id="@+id/btnC"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/latihandaya1c"/>

        <Button
            android:id="@+id/btnD"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/latihandaya1d"/>

        <Button
            android:id="@+id/btnE"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/latihandaya1e"/>

    </LinearLayout>

</RelativeLayout>