<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.soal.soal9.Soal9Fragment">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_soal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soal9"
        android:textColor="@color/black"
        android:layout_marginHorizontal="24dp"
        android:textSize="18sp"
        android:layout_marginTop="100dp"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/btnA"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/soal9a"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnB"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal9b"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnC"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal9c"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnD"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal9d"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnE"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal9e"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>