<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.soal.soal8.Soal8Fragment">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_soal"/>

    <ImageView
        android:id="@+id/img8"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/toolbar_soal"
        android:src="@drawable/img8"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soal8"
        android:textColor="@color/black"
        android:layout_marginHorizontal="24dp"
        android:textSize="14sp"
        android:layout_below="@id/img8"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/btnA"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/soal8a"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnB"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal8b"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnC"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal8c"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnD"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal8d"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnE"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal8e"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>