<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_new_blue"
    tools:context=".menu.soal.soal2.Soal2Fragment">

    <!-- TODO: Update blank fragment layout -->
    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar_soal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lytsoal"
        android:layout_below="@id/toolbar_soal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soal2"
            android:textColor="@color/black"
            android:layout_marginHorizontal="24dp"
            android:textSize="18sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:id="@+id/lytsoal">

        <Button
            android:id="@+id/btnA"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/soal2a"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnB"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal2b"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnC"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal2c"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnD"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal2d"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnE"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/soal2e"
            android:textAllCaps="false"/>

    </LinearLayout>


</RelativeLayout>